# Autoweave-Library

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  PYPI_README.md  README.md  SECURITY.md  TESTING.md  build_backend.py  context.md  docker-compose.yml  implementation_plan.md  pyproject.toml  task_list.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
agents/backend/: autoweave.yaml  playbook.yaml  soul.md
agents/backend/skills/: README.md  api_contracts.md  data_integrity.md
agents/frontend/: autoweave.yaml  playbook.yaml  soul.md
agents/frontend/skills/: README.md  accessibility_checks.md  ui_states.md
agents/manager/: autoweave.yaml  playbook.yaml  soul.md
agents/manager/skills/: README.md  stakeholder_alignment.md  workflow_decomposition.md
agents/reviewer/: autoweave.yaml  playbook.yaml  soul.md
agents/reviewer/skills/: README.md  qa_validation.md  release_readiness.md
apps/: __init__.py
apps/cli/: __init__.py  bootstrap.py  main.py  validation.py
autoweave/: __init__.py  celery_queue.py  celery_tasks.py  config_models.py  exceptions.py  local_runtime.py  models.py  protocols.py  settings.py  types.py
autoweave/approvals/: __init__.py  service.py
autoweave/artifacts/: __init__.py  filesystem.py  handles.py  registry.py
autoweave/compiler/: __init__.py  loader.py  openhands.py
autoweave/context/: __init__.py  service.py
autoweave/events/: __init__.py  local.py  redaction.py  schema.py  service.py  stream.py
autoweave/graph/: __init__.py  neo4j_backend.py  neo4j_projection.py  projection.py
autoweave/memory/: __init__.py  store.py
autoweave/monitoring/: __init__.py  contracts.py  dashboard_page.py  service.py  web.py
autoweave/observability/: __init__.py  debug.py  local.py  metrics.py  service.py  tracing.py
autoweave/orchestration/: __init__.py  graph.py  scheduler.py  service.py  state.py
autoweave/routing/: __init__.py  policy.py
autoweave/storage/: __init__.py  coordination.py  durable.py  postgres.py  repositories.py  tasks.py  wiring.py
autoweave/templates/: __init__.py  sample_project.py
autoweave/workers/: __init__.py  runtime.py
autoweave/workflows/: __init__.py  spec.py
configs/routing/: model_profiles.yaml
configs/runtime/: observability.yaml  runtime.yaml  storage.yaml  vertex.yaml
configs/workflows/: team.workflow.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  RELEASE.md  autoweave_diagrams_source.md  autoweave_high_level_architecture.md  autoweave_implementation_spec.md
docs/help/: cli_reference.md  quick_start.md  troubleshooting.md
scripts/: health_report.py  smoke_test.sh
tests/: conftest.py  test_celery_queue.py  test_cli.py  test_infra.py  test_local_observability.py  test_local_runtime.py  test_monitoring.py  test_observability.py  test_orchestration.py  test_packaging.py  test_runtime.py  test_settings.py  test_shared_contracts.py  test_storage_context.py  test_storage_durable.py  test_storage_service_wiring.py  test_templates.py  test_ui.py
