[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "autoweave"
version = "0.1.0"
description = "Terminal-first multi-agent orchestration library built around OpenHands remote workers and Vertex AI."
readme = "context.md"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.12.3",
  "pydantic-settings>=2.10.1",
  "PyYAML>=6.0.3",
  "python-dotenv>=1.0.1",
  "httpx>=0.28.1",
  "SQLAlchemy>=2.0.44",
  "psycopg[binary]>=3.2.12",
  "redis>=6.4.0",
  "neo4j>=5.28.2",

  "typer>=0.23.0",
]

[project.optional-dependencies]
dev = ["build>=1.3.0", "pytest>=9.0.2"]

[project.scripts]
autoweave = "apps.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["autoweave*", "apps*"]
